--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,8 @@ springdoc:
   api-docs:
     enabled: true
     path: /v3/api-docs
+    groups:
+      enabled: true
   group-configs:
     - group: 'default'
       paths-to-match: '/**'
